k8s/apps/authentik/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-worker
  template:
    metadata:
      labels:
        app: authentik-worker
    spec:
      containers:
        - name: authentik
          image: ghcr.io/goauthentik/server:2024.12
          args: ["worker"]
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 600Mi
