k8s/apps/authentik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  namespace: authentik
spec:
  selector:
    app: authentik-server
  ports:
    - port: 80
      targetPort: 9000
      name: http
