k8s/apps/authentik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingress
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.armleth.fr`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls:
    secretName: authentik-tls-secret
